--- a/HTML, CSS, JS, PY/Privacy_dept/welcome_page.html
+++ b/HTML, CSS, JS, PY/Privacy_dept/welcome_page.html
@@ -14,7 +14,7 @@
                 <h2 id="t2">IQ</h2>
 
                 <a href="rank_page.html">Rank</a>
-                <a href="test_page.html">Privacy Dept</a>
+                <a href="test_page.html">Privacy Debt</a>
 
                 <!-- Bird code start -->
 
@@ -85,9 +85,9 @@
         <div class="container">
             <div id="hero_section">
                 <div id="txt">
-                    <h1>WELCOME TO PRIVACY DEPT</h1>
+                    <h1>WELCOME TO PRIVACY DEBT</h1>
 
-                    <p>It design for your safety. It help you check account safety and<br> how to make more safe</p>
+                    <p>It is designed for your safety. It helps you check your account's safety and<br> learn how to make it more secure.</p>
                     <br>
                     <button id="seeMore">See more..</button>
                 </div>
@@ -97,7 +97,7 @@
 
             <!-- <hr></hr> -->
             <div id="para">
-                <h2>What is need?</h2>
+                <h2>What is the need?</h2>
                 <p>
                     Privacy debt refers to the accumulated cost and risk an organization incurs by delaying or ignoring privacy-by-design principles during the development of a product, system, or service. Much like technical debt, it's the "privacy shortcut" taken—such as failing to implement data minimization, using unclear consent forms, or having weak data access controls—that must eventually be "repaid." The need to understand this concept is critical because this debt doesn't disappear; it grows interest. This "repayment" eventually comes due in the form of massive regulatory fines (like under GDPR), a catastrophic loss of customer trust after a breach, brand damage, and the immense operational cost of diverting engineering teams from new features to emergency, foundational fixes just to achieve legal compliance.
                 </p>
