--- a/HTML, CSS, JS, PY/Privacy_dept/login_register.html
+++ b/HTML, CSS, JS, PY/Privacy_dept/login_register.html
@@ -11,7 +11,7 @@
                 <h2 id="t2"><a href="welcome_page.html" style="margin: 0px; padding: 0px;">IQ</a></h2>
 
                 <a href="welcome_page.html">Store</a>
-                <a href="test_page.html">Privacy Dept</a>
+                <a href="test_page.html">Privacy Debt</a>
 
                 <!-- Bird code start -->
 
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="head_name">
                 <h1 id="t1">INSIGHT</h1>
-                <h1 id="t2">Q</h1>
+                <h1 id="t2">IQ</h1>
             </div>
             <h4 id="t3">Login or Register</h4>
             <div id="login_register_sel">
