--- a/HTML, CSS, JS, PY/Privacy_dept/overview_page.html
+++ b/HTML, CSS, JS, PY/Privacy_dept/overview_page.html
@@ -9,7 +9,7 @@
                 <h2 id="t2"><a href="welcome_page.html" style="margin: 0px; padding: 0px;">IQ</a></h2>
 
                 <a href="rank_page.html">Rank</a>
-                <a href="test_page.html">Privacy Dept</a>
+                <a href="test_page.html">Privacy Debt</a>
 
                 <!-- Bird code start -->
 
@@ -81,7 +81,7 @@
         <div class="main-container" id="main-container">
             <div class="head_name">
                 <h1 id="t1">INSIGHT</h1>
-                <h1 id="t2">Q</h1>
+                <h1 id="t2">IQ</h1>
             </div>
             <h4 id="t3">RESULT/TIPS PRIVACY SCORE</h4>
             <div id="graphs">
